--- a/public/css/cadastro.css
+++ b/public/css/cadastro.css
@@ -172,15 +172,27 @@
 }
 
 .link-index {
-    color: #000;
-    /* font-style: none; */
+    color: #000 ;
     text-decoration: none;
+    background-color: #b3ff00; 
+    border: none;
+    color: rgb(43, 43, 43);
+    padding: 10px 12px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 20px;
+    margin-top: 30px;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: 0.5s;
 }
 
 
 
 #bnt-password {
     width: 35px;
+    /* margin-right: 10px; */
     margin-top: 30px;
     display: flex;
     align-items: center;
